@@ -1,0 +1,12 @@
+CONSOLE MESSAGE: line 9: RangeError: Maximum call stack size exceeded.
+Tests hitting the recursion limit with equality comparisons. At one point this crashed due to lack of exception checking inside the engine.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+If the test did not crash, it has passed.
+
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
